// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TypeScript Operations Plugin > Config > should include fragment variable definitions when experimentalFragmentVariables is set 1`] = `
"export type TextNotificationFragmentFragment = { text?: string };


export type TextNotificationFragmentFragmentVariables = Exact<{
  skip: boolean;
}>;
"
`;

exports[`TypeScript Operations Plugin > Issues > #2699 - Issues with multiple interfaces and unions 1`] = `
"export type GetEntityBrandDataQueryVariables = Exact<{
  gid: string;
  brand: string;
}>;


export type GetEntityBrandDataQuery = { node:
    | { __typename: 'Company', active: boolean, id: string, createdAt: any, updatedAt: any, brandData: { active: boolean, browsable: boolean, title: string, alternateTitle: string | null, description: string } | null, createdBy: { id: string, name: string } | null, updatedBy: { id: string, name: string } | null }
    | { __typename: 'Theater', active: boolean, id: string, createdAt: any, updatedAt: any, brandData: { active: boolean, browsable: boolean, title: string, alternateTitle: string | null, description: string } | null, createdBy: { id: string, name: string } | null, updatedBy: { id: string, name: string } | null }
    | { __typename: 'Movie', id: string, createdAt: any, updatedAt: any, brandData: { active: boolean, browsable: boolean, title: string, alternateTitle: string | null, description: string } | null, createdBy: { id: string, name: string } | null, updatedBy: { id: string, name: string } | null }
    | { __typename: 'User', id: string, createdAt: any, updatedAt: any, brandData: { active: boolean, browsable: boolean, title: string, alternateTitle: string | null, description: string } | null, createdBy: { id: string, name: string } | null, updatedBy: { id: string, name: string } | null }
   };

type EntityBrandData_Company_Fragment = { brandData: { active: boolean, browsable: boolean, title: string, alternateTitle: string | null, description: string } | null };

type EntityBrandData_Theater_Fragment = { brandData: { active: boolean, browsable: boolean, title: string, alternateTitle: string | null, description: string } | null };

type EntityBrandData_Movie_Fragment = { brandData: { active: boolean, browsable: boolean, title: string, alternateTitle: string | null, description: string } | null };

type EntityBrandData_User_Fragment = { brandData: { active: boolean, browsable: boolean, title: string, alternateTitle: string | null, description: string } | null };

export type EntityBrandDataFragment =
  | EntityBrandData_Company_Fragment
  | EntityBrandData_Theater_Fragment
  | EntityBrandData_Movie_Fragment
  | EntityBrandData_User_Fragment
;

type ElementMetadata_Company_Fragment = { createdAt: any, updatedAt: any, createdBy: { id: string, name: string } | null, updatedBy: { id: string, name: string } | null };

type ElementMetadata_Theater_Fragment = { createdAt: any, updatedAt: any, createdBy: { id: string, name: string } | null, updatedBy: { id: string, name: string } | null };

type ElementMetadata_Movie_Fragment = { createdAt: any, updatedAt: any, createdBy: { id: string, name: string } | null, updatedBy: { id: string, name: string } | null };

type ElementMetadata_User_Fragment = { createdAt: any, updatedAt: any, createdBy: { id: string, name: string } | null, updatedBy: { id: string, name: string } | null };

export type ElementMetadataFragment =
  | ElementMetadata_Company_Fragment
  | ElementMetadata_Theater_Fragment
  | ElementMetadata_Movie_Fragment
  | ElementMetadata_User_Fragment
;
"
`;

exports[`TypeScript Operations Plugin > Issues > #2916 - Missing import prefix with near-operation-file preset 1`] = `
"export type Department =
  | 'Direction'
  | 'Development';

export type UserQueryVariables = Exact<{ [key: string]: never; }>;


export type UserQuery = { user: { id: string, username: string, email: string, dep: Types.Department } };
"
`;

exports[`TypeScript Operations Plugin > Issues > #3064 - fragments over interfaces causes issues with fields 1`] = `
"type Venue_Hotel_Fragment = { id: string, gpsPosition: { lat: number, lng: number } };

type Venue_Transport_Fragment = { id: string };

export type VenueFragment =
  | Venue_Hotel_Fragment
  | Venue_Transport_Fragment
;

export type QQueryVariables = Exact<{ [key: string]: never; }>;


export type QQuery = { hotel: { id: string, gpsPosition: { lat: number, lng: number } }, transport: { id: string } };
"
`;

exports[`TypeScript Operations Plugin > Issues > #3064 - fragments over interfaces causes issues with fields 2`] = `
"type Venue_Hotel_Fragment = { id: string, gpsPosition: { lat: number, lng: number } };

type Venue_Transport_Fragment = { id: string };

export type VenueFragment =
  | Venue_Hotel_Fragment
  | Venue_Transport_Fragment
;

export type QQueryVariables = Exact<{ [key: string]: never; }>;


export type QQuery = { hotel: { id: string, gpsPosition: { lat: number, lng: number } }, transport: { id: string } };
function test(q: QQuery) {
        if (q.hotel) {
            const t1 = q.hotel.gpsPosition.lat
        }

        if (q.transport) {
            const t2 = q.transport.id;
        }
    }"
`;

exports[`TypeScript Operations Plugin > Issues > #6874 - generates types when parent type differs from spread fragment member types 1`] = `
"export type SnakeQueryQueryVariables = Exact<{ [key: string]: never; }>;


export type SnakeQueryQuery = { snake:
    | { name: string, features: { color: string, length: number } }
    | Record<PropertyKey, never>
   };

type AnimalFragment_Bat_Fragment = { features: { color: string, wingspan: number } };

type AnimalFragment_Snake_Fragment = { features: { color: string, length: number } };

export type AnimalFragmentFragment =
  | AnimalFragment_Bat_Fragment
  | AnimalFragment_Snake_Fragment
;
"
`;

exports[`TypeScript Operations Plugin > Issues > #8793 selecting __typename should not be optional 1`] = `
"export type SnakeQueryQueryVariables = Exact<{ [key: string]: never; }>;


export type SnakeQueryQuery = { __typename: 'Query', snake:
    | { __typename: 'Snake' }
    | { __typename: 'Error' }
   };
"
`;

exports[`TypeScript Operations Plugin > Selection Set > Should generate the correct __typename when using both inline fragment and spread over type 1`] = `
"export type UserQueryQueryVariables = Exact<{ [key: string]: never; }>;


export type UserQueryQuery = { user: { id: string, name: string | null } | null };

export type UserFragment = { id: string, name: string | null };
"
`;

exports[`TypeScript Operations Plugin > Selection Set > Should generate the correct __typename when using fragment over type 1`] = `
"export type UserQueryQueryVariables = Exact<{ [key: string]: never; }>;


export type UserQueryQuery = { user: { id: string, name: string | null } | null };
"
`;

exports[`TypeScript Operations Plugin > Selection Set > Should generate the correct __typename when using fragment spread over type 1`] = `
"export type UserQueryQueryVariables = Exact<{ [key: string]: never; }>;


export type UserQueryQuery = { user: { id: string, name: string | null } | null };

export type UserFragment = { id: string, name: string | null };
"
`;

exports[`TypeScript Operations Plugin > Selection Set > Should generate the correct __typename when using fragment spread over union 1`] = `
"export type UserFragmentFragment = { id: string };

export type AaaQueryVariables = Exact<{ [key: string]: never; }>;


export type AaaQuery = { user:
    | { id: string }
    | Record<PropertyKey, never>
   };
"
`;

exports[`TypeScript Operations Plugin > Selection Set > Should generate the correct intersection for fragments when using with interfaces with same type 2`] = `
"export type Unnamed_1_QueryVariables = Exact<{ [key: string]: never; }>;


export type Unnamed_1_Query = { b:
    | { id: string, x: number }
    | Record<PropertyKey, never>
   | null };

export type AFragment = { id: string };

export type BFragment = { x: number };
"
`;

exports[`TypeScript Operations Plugin > Selection Set > Should have valid __typename usage and split types according to that (with usage) 1`] = `
"type NetRoute_Ipv4Route_Fragment = { __typename: 'IPV4Route', ipv4Address: any | null, ipv4Gateway: any | null };

type NetRoute_Ipv6Route_Fragment = { __typename: 'IPV6Route', ipv6Address: any | null, ipv6Gateway: any | null };

export type NetRouteFragment =
  | NetRoute_Ipv4Route_Fragment
  | NetRoute_Ipv6Route_Fragment
;

export type QqQueryVariables = Exact<{ [key: string]: never; }>;


export type QqQuery = { routes: Array<
    | { __typename: 'IPV4Route', ipv4Address: any | null, ipv4Gateway: any | null }
    | { __typename: 'IPV6Route', ipv6Address: any | null, ipv6Gateway: any | null }
  > };
"
`;

exports[`TypeScript Operations Plugin > Selection Set > Should have valid __typename usage and split types according to that (with usage) 2`] = `
"type NetRoute_Ipv4Route_Fragment = { __typename: 'IPV4Route', ipv4Address: any | null, ipv4Gateway: any | null };

type NetRoute_Ipv6Route_Fragment = { __typename: 'IPV6Route', ipv6Address: any | null, ipv6Gateway: any | null };

export type NetRouteFragment =
  | NetRoute_Ipv4Route_Fragment
  | NetRoute_Ipv6Route_Fragment
;

export type TestFragment = { ipv6Address: any | null, ipv6Gateway: any | null };

export type QqQueryVariables = Exact<{ [key: string]: never; }>;


export type QqQuery = { routes: Array<
    | { __typename: 'IPV4Route', ipv4Address: any | null, ipv4Gateway: any | null }
    | { __typename: 'IPV6Route', ipv6Address: any | null, ipv6Gateway: any | null }
  > };
"
`;

exports[`TypeScript Operations Plugin > Selection Set > Should have valid fragments intersection on different types (with usage) #2498 1`] = `
"export type TomFragment = { id: string, foo: string };

export type JerryFragment = { id: string, bar: string };

type User_Tom_Fragment = { id: string, foo: string };

type User_Jerry_Fragment = { id: string, bar: string };

export type UserFragment =
  | User_Tom_Fragment
  | User_Jerry_Fragment
;

export type UserQueryQueryVariables = Exact<{ [key: string]: never; }>;


export type UserQueryQuery = { user:
    | { id: string, foo: string }
    | { id: string, bar: string }
   | null };
"
`;

exports[`TypeScript Operations Plugin > Union & Interfaces > #4216 - handle fragments against unions and interfaces with flattenGeneratedTypes 1`] = `
"export type SearchPopularQueryVariables = Exact<{ [key: string]: never; }>;


export type SearchPopularQuery = { search: Array<
    | { id: string | null }
    | { value: string, dimension: { id: string | null } | null }
  > | null };
"
`;

exports[`TypeScript Operations Plugin > Union & Interfaces > Should handle union selection sets with both FragmentSpreads and InlineFragments 1`] = `
"export type UserQueryQueryVariables = Exact<{ [key: string]: never; }>;


export type UserQueryQuery = { user:
    | { login: string, id: string }
    | { message: string }
    | { message: string, info: { message2: string, message: string } | null }
   };

export type AdditionalInfoFragment = { message: string };

type UserResult1_User_Fragment = { id: string };

type UserResult1_Error3_Fragment = { info: { message2: string } | null };

export type UserResult1Fragment =
  | UserResult1_User_Fragment
  | UserResult1_Error3_Fragment
;

type UserResult_User_Fragment = { id: string };

type UserResult_Error2_Fragment = { message: string };

export type UserResultFragment =
  | UserResult_User_Fragment
  | UserResult_Error2_Fragment
;
"
`;

exports[`TypeScript Operations Plugin > Union & Interfaces > Should handle union selection sets with both FragmentSpreads and InlineFragments with flattenGeneratedTypes 1`] = `
"export type UserQueryQueryVariables = Exact<{ [key: string]: never; }>;


export type UserQueryQuery = { user:
    | { id: string, login: string }
    | { message: string }
    | { message: string, info: { message2: string, message: string } | null }
   };

        function t(q: UserQueryQuery) {
            if (q.user) {
                if (q.user.__typename === 'User') {
                    if (q.user.id) {
                        const u = q.user.login;
                    }
                }
                if (q.user.__typename === 'Error2') {
                    console.log(q.user.message);
                }
                if (q.user.__typename === 'Error3') {
                    if (q.user.info) {
                        console.log(q.user.info.__typename)
                    }
                }
            }
        }"
`;

exports[`TypeScript Operations Plugin > Union & Interfaces > Should handle union selection sets with both FragmentSpreads and InlineFragments with flattenGeneratedTypes and directives 1`] = `
"export type UserQueryQueryVariables = Exact<{ [key: string]: never; }>;


export type UserQueryQuery = { user:
    | { id: string, test2: string | null, login: string, test: string | null }
    | { message: string }
    | { message: string, info: { message2: string, message: string } | null }
   };

        function t(q: UserQueryQuery) {
            if (q.user) {
                if (q.user.__typename === 'User') {
                    if (q.user.id) {
                        const u = q.user.login;
                    }
                }
                if (q.user.__typename === 'Error2') {
                    console.log(q.user.message);
                }
                if (q.user.__typename === 'Error3') {
                    if (q.user.info) {
                        console.log(q.user.info.__typename)
                    }
                }
            }
        }"
`;
